--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "artist.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon app.js"
   },
   "repository": {
     "type": "git",
@@ -19,7 +20,12 @@
   "homepage": "https://github.com/Minsun91/Incedo-Services-GmbH-backend-challenge#readme",
   "dependencies": {
     "axios": "^1.1.3",
+    "csv-stringify": "^6.2.1",
     "dotenv": "^16.0.3",
-    "node-fetch": "^2.6.7"
+    "export-to-csv": "^0.2.1",
+    "express": "^4.18.2",
+    "json2csv": "^5.0.7",
+    "node-fetch": "^2.6.7",
+    "nodemon": "^2.0.20"
   }
 }
