--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "incedo-services-gmbh-backend-challenge",
   "version": "1.0.0",
   "description": "",
-  "main": "artist.js",
+  "main": "src/artist.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon app.js"
+    "start": "nodemon src/app.js"
   },
   "repository": {
     "type": "git",
